aws/cluster/network.tf
resource "aws_vpc" "current" {
  cidr_block = try(coalesce(local.cfg.cluster_vpc_cidr, null), "10.0.0.0/16")

  enable_dns_hostnames = try(coalesce(local.cfg.cluster_vpc_dns_hostnames, null), false)
  enable_dns_support   = try(coalesce(local.cfg.cluster_vpc_dns_support, null), true)

  tags = local.eks_metadata_tags
}

resource "aws_subnet" "current" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  availability_zone       = try(coalesce(local.cfg.cluster_availability_zones, null), [])[count.index]
  cidr_block              = cidrsubnet(aws_vpc.current.cidr_block, try(coalesce(local.cfg.cluster_vpc_control_subnet_newbits, null), 8), count.index)
  vpc_id                  = aws_vpc.current.id
  map_public_ip_on_launch = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true)

  tags = local.eks_metadata_tags
}

resource "aws_subnet" "node_pool" {
  count = try(coalesce(local.cfg.cluster_vpc_legacy_node_subnets, null), false) ? 0 : length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  availability_zone       = try(coalesce(local.cfg.cluster_availability_zones, null), [])[count.index]
  cidr_block              = cidrsubnet(aws_vpc.current.cidr_block, try(coalesce(local.cfg.cluster_vpc_node_subnet_newbits, null), 4), try(coalesce(local.cfg.cluster_vpc_node_subnet_number_offset, null), 1) + count.index)
  vpc_id                  = aws_vpc.current.id
  map_public_ip_on_launch = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true)

  tags = local.eks_metadata_tags
}

resource "aws_internet_gateway" "current" {
  vpc_id = aws_vpc.current.id

  tags = local.eks_metadata_tags
}

resource "aws_eip" "nat_gw" {
  count = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true) == false ? length(try(coalesce(local.cfg.cluster_availability_zones, null), [])) : 0

  tags = local.eks_metadata_tags

  domain = "vpc"
}

resource "aws_nat_gateway" "current" {
  count = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true) == false ? length(try(coalesce(local.cfg.cluster_availability_zones, null), [])) : 0

  allocation_id = aws_eip.nat_gw[count.index].id
  subnet_id     = aws_subnet.current[count.index].id

  tags = merge(
    local.eks_metadata_tags,
    { "kubestack.com/cluster_provider_zone" = try(coalesce(local.cfg.cluster_availability_zones, null), [])[count.index] }
  )

  depends_on = [aws_internet_gateway.current]
}

resource "aws_route_table" "current" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  vpc_id = aws_vpc.current.id
}

resource "aws_route" "current" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  route_table_id = aws_route_table.current[count.index].id

  gateway_id             = aws_internet_gateway.current.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "current" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  subnet_id      = aws_subnet.current[count.index].id
  route_table_id = aws_route_table.current[count.index].id
}

resource "aws_route_table" "node_pool" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  vpc_id = aws_vpc.current.id
}

resource "aws_route" "node_pool" {
  count = length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  route_table_id = aws_route_table.node_pool[count.index].id

  gateway_id             = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true) == false ? null : aws_internet_gateway.current.id
  nat_gateway_id         = try(coalesce(local.cfg.cluster_vpc_subnet_map_public_ip, null), true) == false ? aws_nat_gateway.current[count.index].id : null
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "node_pool" {
  count = try(coalesce(local.cfg.cluster_vpc_legacy_node_subnets, null), false) ? 0 : length(try(coalesce(local.cfg.cluster_availability_zones, null), []))

  subnet_id      = aws_subnet.node_pool[count.index].id
  route_table_id = aws_route_table.node_pool[count.index].id
}
